sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departpos' in definition of a vehicle is empty.
Error: Invalid departpos definition for vehicle '0'
Quitting (on error).
